--- a/Consultation&Comanagement.html
+++ b/Consultation&Comanagement.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-47" style="background-color: rgb(8, 139, 139); padding-top: 90px; padding-bottom: 60px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-4z" style="background-color: rgb(8, 139, 139); padding-top: 120px; padding-bottom: 30px;">
 
     
     <div class="container">
@@ -68,10 +68,10 @@
             <div class="mbr-table-md-up">
               <div class="mbr-table-cell mbr-right-padding-md-up col-md-8 text-xs-center text-md-left">
                   <h3 class="mbr-info-title mbr-section-title display-2">WOODBRIDGE EYE CARE</h3>
-                  <h2 class="mbr-info-subtitle mbr-section-subtitle">3460 W. FM 544 Suite #550 Wylie, TX 75098<br>(972) 429-3501&nbsp;</h2>
+                  <h2 class="mbr-info-subtitle mbr-section-subtitle">Woodbridge Crossing Shopping Center<br>3460 W. FM 544 Suite #550<br>Wylie, TX 75098<br><br></h2>
               </div>
               <div class="mbr-table-cell col-md-4">
-                  
+                  <div class="text-xs-center"><a class="btn btn-info" href="https://reviews.solutionreach.com/vs/woodbridge_eye_care/appt">MAKE AN APPOINTMENT TODAY!</a></div>
               </div>
             </div>
 
