--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-4o" style="background-color: rgb(8, 139, 139); padding-top: 120px; padding-bottom: 30px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-4o" style="background-color: rgb(8, 139, 139); padding-top: 120px; padding-bottom: 30px;">
 
     
     <div class="container">
@@ -73,7 +73,7 @@
                   <h2 class="mbr-info-subtitle mbr-section-subtitle">Woodbridge Crossing Shopping Center<br>3460 W. FM 544 Suite #550<br>Wylie, TX 75098<br><br></h2>
               </div>
               <div class="mbr-table-cell col-md-4">
-                  <div class="text-xs-center"><a class="btn btn-info" href="https://mobirise.comhttps://reviews.solutionreach.com/vs/woodbridge_eye_care/appt">MAKE AN APPOINTMENT</a></div>
+                  <div class="text-xs-center"><a class="btn btn-info" href="https://reviews.solutionreach.com/vs/woodbridge_eye_care/appt">MAKE AN APPOINTMENT TODAY!</a></div>
               </div>
             </div>
 
