--- a/mapanddirections.html
+++ b/mapanddirections.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Site Creator</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-62" style="background-color: rgb(8, 139, 139); padding-top: 80px; padding-bottom: 40px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Creator</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-62" style="background-color: rgb(8, 139, 139); padding-top: 80px; padding-bottom: 40px;">
 
     
     <div class="container">
@@ -65,7 +65,7 @@
             <div class="mbr-table-md-up">
 
               <div class="mbr-table-cell mbr-right-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 57%;">
-                  <div class="mbr-figure"><img src="assets/images/screen-shot-2017-01-23-at-11-1400x3861.png"></div>
+                  <div class="mbr-figure"><img src="assets/images/screen-shot-2017-01-23-at-11-1400x3864.png"></div>
               </div>
 
               
